Increased performance using Virtual Threads